third_party/move/move-prover/tests/sources/functional/consts.exp
Move prover returns: exiting with verification errors
error: unknown assertion failed
   ┌─ tests/sources/functional/consts.move:45:13
   │
45 │             assert BYTE_ARRAY[0] == 22;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/consts.move:45: array_1_incorrect

error: unknown assertion failed
   ┌─ tests/sources/functional/consts.move:51:13
   │
51 │             assert ADDRESS_ARRAY[0] == @0x222;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/consts.move:51: array_2_incorrect

error: unknown assertion failed
   ┌─ tests/sources/functional/consts.move:67:13
   │
67 │             assert v1[0] == @0x111 && v1[1] == @0x222 && v1[2] == @0x333;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/consts.move:65: array_in_fun_incorrect
   =         v1 = <redacted>
   =     at tests/sources/functional/consts.move:67: array_in_fun_incorrect

error: unknown assertion failed
   ┌─ tests/sources/functional/consts.move:74:13
   │
74 │             assert v1[0] == false && v1[1] == false && v1[2] == false;
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/consts.move:72: array_in_fun_incorrect_bool
   =         v1 = <redacted>
   =     at tests/sources/functional/consts.move:74: array_in_fun_incorrect_bool

error: post-condition does not hold
   ┌─ tests/sources/functional/consts.move:32:9
   │
32 │         ensures !result.b;
   │         ^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/consts.move:27: init_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/consts.move:28: init_incorrect
   =     at tests/sources/functional/consts.move:31: init_incorrect (spec)
   =     at tests/sources/functional/consts.move:32: init_incorrect (spec)
